# music_style

./: README.md  music-style.ipynb  pyproject.toml
src/: eval_model.py  train.py
src/baseline/: eval_model.py  train.py
src/first_try/: best_model_2025-11-24_22-16-23.pt  eval_model.py  train.py
src/runs_configs/: 2025-11-24_20-56-04.json  2025-11-24_22-16-23.json  2025-12-02_22-24-39.json  2025-12-06_22-47-21.json  2025-12-06_23-02-41.json  2025-12-07_00-34-06.json  2025-12-07_12-31-13.json  baseline.json
src/tools/: CNNs.py  fma_small_dataset.py  mels_dataset.py  parse_args.py  precompute_mels.py  saver.py
src/tools/CNNs/: CNNs.py  RCNN_V2.py  small_cnn.py
src/tools/config_saver/: saver.py
src/weight/: baseline.pt  baseline_model.pt  best_model_2025-12-06_22-47-21.pt  best_model_2025-12-06_23-02-41.pt  best_model_2025-12-07_00-34-06.pt  best_model_2025-12-07_12-31-13.pt
